packages/truffle/test/sources/migrations/error/contracts/Abstract.sol
pragma solidity ^0.5.0;

contract Abstract {
  function method() public;
}
